--- a/static/beautify.css
+++ b/static/beautify.css
@@ -27,7 +27,6 @@ button {
 table {
     border-collapse: collapse;
     border: solid 2px black;
-    /* margin-top: 30px; */
     margin: auto;
 }
 
@@ -41,6 +40,14 @@ th, td {
 
 .buttonDiv {
     text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.buttonDiv a {
+    color: darkgreen;
+    text-decoration: none;
+    text-shadow: black 1px 1px 2px;
 }
 
 .chartDiv {
