--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,18 +13,20 @@
                 <h1>Login</h1>
                 <form action="/loggingIn" method="POST">
                     <p>Username: </p>
-                    <input type="text">
+                    <input type="text" name="username">
                     <p>Password: </p>
-                    <input type="password">
+                    <input type="password" name="password">
+                    <input type="submit">
                 </form>
             </div>
             <div class="logRegBox">
                 <h1>Registration</h1>
                 <form action="/registering" method="POST">
                     <p>Username: </p>
-                    <input type="text">
+                    <input type="text" name="username">
                     <p>Password: </p>
-                    <input type="password">
+                    <input type="password" name="password">
+                    <input type="submit">
                 </form>
             </div>
         </div>
