--- a/views/table.ejs
+++ b/views/table.ejs
@@ -11,6 +11,9 @@
         <div class="buttonDiv">
             <button><a href="/">Home</a></button>
             <button><a href="chart">Fitness History Chart</a></button>
+            <form action="/logout" method="POST">
+                <button class="buttonDiv">Logout</button>
+            </form>
         </div>
         <table>
             <tr>
