--- a/static/beautify.css
+++ b/static/beautify.css
@@ -42,6 +42,8 @@ th, td {
     text-align: center;
     margin-top: 15px;
     margin-bottom: 15px;
+    color: darkgreen;
+    text-decoration: none;
 }
 
 .buttonDiv a {
