added test react element

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -26,5 +26,10 @@
             <input type="number" name="plank_seconds">
             <input type="submit">
         </form>
+        <div id="like_button_container" style="width: 100px; height: 100px;"></div>
+        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+        <script src="like_button.js"></script>
     </body>
 </html>
