--- a/static/beautify.css
+++ b/static/beautify.css
@@ -7,6 +7,11 @@ h1 {
     text-align: center;
 }
 
+h4 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 p {
     text-align: center;
     /* margin-top: 7px; */
